--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/favicon.png" type="image/png" />
     <title>live streaming</title>
   </head>
   <body></body>
