--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       rel="stylesheet"
     />
     <link rel="icon" href="assets/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/dist/index.css" />
     <title>live streaming</title>
   </head>
-  <body></body>
+  <body>
+    hello
+  </body>
 </html>
