--- a/index.html
+++ b/index.html
@@ -299,5 +299,35 @@
         <div class="form-section__bg-cloud cloud--right"></div>
       </section>
     </main>
+    <footer class="footer-section">
+      <div class="container">
+        <div class="footer">
+          <div class="footer__terms">
+            <div class="footer__terms-links">
+              <a href="#" class="footer__terms-link">Terms of Use</a>
+              <a href="#" class="footer__terms-link">Privacy Policy</a>
+            </div>
+            <div class="footer__terms-rights">© CloudFlex 2024. All Rights Reserved.</div>
+          </div>
+          <address class="footer__contacts">
+            <a href="http://linkedin.com" target="_blank">
+              <svg class="footer__contacts-icon">
+                <use href="assets/sprites.svg#linkedin-icon"></use>
+              </svg>
+            </a>
+            <a href="http://facebook.com" target="_blank">
+              <svg class="footer__contacts-icon">
+                <use href="assets/sprites.svg#facebook-icon"></use>
+              </svg>
+            </a>
+            <a href="http://instagram.com">
+              <svg class="footer__contacts-icon" target="_blank">
+                <use href="assets/sprites.svg#instagram-icon"></use>
+              </svg>
+            </a>
+          </address>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
