--- a/index.html
+++ b/index.html
@@ -41,6 +41,41 @@
         </nav>
       </div>
     </header>
+    <div class="mobile-nav">
+      <label for="checkboxID" class="mobile-nav__burger">
+        <svg class="mobile-nav__burger-icon">
+          <use href="assets/sprites.svg#burger-icon"></use>
+        </svg>
+      </label>
+      <input type="checkbox" id="checkboxID" class="mobile-nav__toggler" />
+      <nav class="mobile-nav__menu nav">
+        <ul class="nav__list">
+          <li class="nav__list-item">
+            <a href="#work" class="nav__list-item-link">How we work</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="#about" class="nav__list-item-link">About us</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="#experience" class="nav__list-item-link">Experience</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="#testimonials" class="nav__list-item-link">Testimonials</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="#form" class="nav__list-item-link">Form</a>
+          </li>
+          <li class="nav__list-item">
+            <a href="#contacts" class="nav__list-item-link">Contacts</a>
+          </li>
+        </ul>
+        <label for="checkboxID" class="nav__close">
+          <svg class="nav__close-icon">
+            <use href="assets/sprites.svg#cross-icon"></use>
+          </svg>
+        </label>
+      </nav>
+    </div>
     <main>
       <section class="hero-section">
         <div class="container">
@@ -68,7 +103,7 @@
           </div>
         </div>
       </section>
-      <section class="work-section">
+      <section class="work-section" id="work">
         <div class="container">
           <div class="work">
             <h2 class="work__title">How we work</h2>
@@ -134,7 +169,7 @@
         </div>
       </section>
       <hr class="divider" />
-      <section class="about-section">
+      <section class="about-section" id="about">
         <div class="container">
           <div class="about">
             <div class="about__quality">
@@ -164,7 +199,7 @@
           </div>
         </div>
       </section>
-      <section class="experience-section">
+      <section class="experience-section" id="experience">
         <div class="container">
           <div class="experience">
             <h2 class="experience__title">Our experience</h2>
@@ -216,7 +251,7 @@
           </div>
         </div>
       </section>
-      <section class="testimonials-section">
+      <section class="testimonials-section" id="testimonials">
         <div class="container">
           <div class="testimonials">
             <h2 class="testimonials__title">Testimonials</h2>
@@ -256,7 +291,7 @@
           </div>
         </div>
       </section>
-      <section class="form-section">
+      <section class="form-section" id="form">
         <div class="container">
           <div class="form-section__wrapper">
             <form
@@ -299,7 +334,7 @@
         <div class="form-section__bg-cloud cloud--right"></div>
       </section>
     </main>
-    <footer class="footer-section">
+    <footer class="footer-section" id="contacts">
       <div class="container">
         <div class="footer">
           <div class="footer__terms">
